Add object infomations

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,5 +19,6 @@
     "pepper_seeds_assumed_name": "Lumpy Seeds",
     "pomegranate_seeds_assumed_name": "Windblown Seeds",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
-    "durian_seeds_assumed_name": "Brittle Seed Pods"
+    "durian_seeds_assumed_name": "Brittle Seed Pods",
+    "butterflymuffin": "Butter Muffin"
 }
