--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -16,5 +16,6 @@
     "pepper_seeds_assumed_name": "혹투성이 씨앗",
     "pomegranate_seeds_assumed_name": "솜털 달린 씨앗",
     "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
-    "durian_seeds_assumed_name": "털난 씨앗 꼬투리"
+    "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
+    "butterflymuffin": "버터 머핀"
 }
