Apply localization partially

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,39 +1,40 @@
 {
     "@@locale": "en",
-    "helloWorld": "Hello World!",
-    "@helloWorld": {
-        "description": "The conventional newborn programmer greeting"
-    },
-    "sideBar_farm": "Farm",
-    "sideBar_cook": "Cook",
-    "potato_seeds_assumed_name": "Fluffy Seeds",
-    "carrot_seeds_assumed_name": "Oblong Seeds",
-    "corn_seeds_assumed_name": "Clustered Seeds",
-    "tomato_seeds_assumed_name": "Spiky Seeds",
     "asparagus_seeds_assumed_name": "Tubular Seeds",
-    "watermelon_seeds_assumed_name": "Square Seeds",
-    "pumpkin_seeds_assumed_name": "Sharp Seeds",
+    "autumn": "Autumn",
+    "butterflymuffin": "Butter Muffin",
+    "carrot_seeds_assumed_name": "Oblong Seeds",
+    "compost": "Compost",
+    "compostwrap": "Compost Wrap",
+    "corn_seeds_assumed_name": "Clustered Seeds",
+    "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
+    "durian_seeds_assumed_name": "Brittle Seed Pods",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
+    "fertilizer": "Bucket-o-poop",
     "garlic_seeds_assumed_name": "Seed Pods",
+    "glommerfuel": "Glommer's Goop",
+    "growthFormula": "Growth Formula",
+    "guano": "Guano",
+    "manure": "Manure",
+    "mix": "Mix",
     "onion_seeds_assumed_name": "Pointy Seeds",
     "pepper_seeds_assumed_name": "Lumpy Seeds",
     "pomegranate_seeds_assumed_name": "Windblown Seeds",
-    "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
-    "durian_seeds_assumed_name": "Brittle Seed Pods",
-    "butterflymuffin": "Butter Muffin",
-    "compost": "Compost",
-    "growthFormula": "Growth Formula",
-    "manure": "Manure",
-    "mix": "Mix",
-    "spoiled_food_name": "Rot",
-    "rottenegg": "Rotten Egg",
     "poop": "Manure",
-    "fertilizer": "Bucket-o-poop",
-    "guano": "Guano",
+    "potato_seeds_assumed_name": "Fluffy Seeds",
+    "pumpkin_seeds_assumed_name": "Sharp Seeds",
+    "rottenegg": "Rotten Egg",
+    "seeds": "Seeds",
+    "sideBar_cook": "Cook",
+    "sideBar_farm": "Farm",
     "soil_amender": "Growth Formula Starter",
     "spoiled_fish": "Spoiled Fish",
     "spoiled_fish_small": "Spoiled Fish Morsel",
-    "compostwrap": "Compost Wrap",
-    "glommerfuel": "Glommer's Goop",
-    "treegrowthsolution": "Tree Jam"
+    "spoiled_food_name": "Rot",
+    "spring": "Spring",
+    "summer": "Summer",
+    "tomato_seeds_assumed_name": "Spiky Seeds",
+    "treegrowthsolution": "Tree Jam",
+    "watermelon_seeds_assumed_name": "Square Seeds",
+    "winter": "Winter"
 }
