--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,36 +1,40 @@
 {
     "@@locale": "ko",
-    "helloWorld": "안녕하세요!",
-    "sideBar_farm": "농사",
-    "sideBar_cook": "요리",
-    "potato_seeds_assumed_name": "솜털 씨앗",
-    "carrot_seeds_assumed_name": "네모난 씨앗",
-    "corn_seeds_assumed_name": "씨앗 뭉치",
-    "tomato_seeds_assumed_name": "삐죽삐죽한 씨앗",
     "asparagus_seeds_assumed_name": "관모양 씨앗",
-    "watermelon_seeds_assumed_name": "정사각형 씨앗",
-    "pumpkin_seeds_assumed_name": "날카로운 씨앗",
+    "autumn": "가을",
+    "butterflymuffin": "버터 머핀",
+    "carrot_seeds_assumed_name": "네모난 씨앗",
+    "compost": "퇴비",
+    "compostwrap": "퇴비 쌈",
+    "corn_seeds_assumed_name": "씨앗 뭉치",
+    "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
+    "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
     "eggplant_seeds_assumed_name": "회오리무늬 씨앗",
+    "fertilizer": "거름통",
     "garlic_seeds_assumed_name": "씨앗 꼬투리",
+    "glommerfuel": "글로머의 점액",
+    "growthFormula": "성장 촉진제",
+    "guano": "구아노",
+    "manure": "비료",
+    "mix": "복합",
     "onion_seeds_assumed_name": "뾰족한 씨앗들",
     "pepper_seeds_assumed_name": "혹투성이 씨앗",
     "pomegranate_seeds_assumed_name": "솜털 달린 씨앗",
-    "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
-    "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
-    "butterflymuffin": "버터 머핀",
-    "compost": "퇴비",
-    "growthFormula": "성장 촉진제",
-    "manure": "비료",
-    "mix": "복합",
-    "spoiled_food_name": "부패물",
-    "rottenegg": "썩은 알",
     "poop": "거름",
-    "fertilizer": "거름통",
-    "guano": "구아노",
+    "potato_seeds_assumed_name": "솜털 씨앗",
+    "pumpkin_seeds_assumed_name": "날카로운 씨앗",
+    "rottenegg": "썩은 알",
+    "seeds": "씨앗",
+    "sideBar_cook": "요리",
+    "sideBar_farm": "농사",
     "soil_amender": "성장 촉진제",
     "spoiled_fish": "썩은 생선",
     "spoiled_fish_small": "썩은 생선 조각",
-    "compostwrap": "퇴비 쌈",
-    "glommerfuel": "글로머의 점액",
-    "treegrowthsolution": "나무 잼"
+    "spoiled_food_name": "부패물",
+    "spring": "봄",
+    "summer": "여름",
+    "tomato_seeds_assumed_name": "삐죽삐죽한 씨앗",
+    "treegrowthsolution": "나무 잼",
+    "watermelon_seeds_assumed_name": "정사각형 씨앗",
+    "winter": "겨울"
 }
