--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -25,6 +25,7 @@
     "pumpkin_seeds_assumed_name": "Sharp Seeds",
     "rottenegg": "Rotten Egg",
     "seeds": "Seeds",
+    "show_seeds_alias": "Show seeds alias",
     "sideBar_cook": "Cook",
     "sideBar_farm": "Farm",
     "soil_amender": "Growth Formula Starter",
