--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -25,6 +25,7 @@
     "pumpkin_seeds_assumed_name": "날카로운 씨앗",
     "rottenegg": "썩은 알",
     "seeds": "씨앗",
+    "show_seeds_alias": "씨앗 별칭 표시",
     "sideBar_cook": "요리",
     "sideBar_farm": "농사",
     "soil_amender": "성장 촉진제",
