--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -1,8 +1,10 @@
 {
     "@@locale": "ko",
+    "add": "추가",
     "asparagus_seeds_assumed_name": "관모양 씨앗",
     "autumn": "가을",
     "butterflymuffin": "버터 머핀",
+    "cancel": "취소",
     "carrot_seeds_assumed_name": "네모난 씨앗",
     "compost": "퇴비",
     "compostwrap": "퇴비 쌈",
