Improve nutrient fulfillment text

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,9 @@
 {
     "@@locale": "en",
     "add": "Add",
+    "name": "name",
+    "crops": "Crops",
+    "fertilizers": "Fertilizers",
     "asparagus_seeds_assumed_name": "Tubular Seeds",
     "autumn": "Autumn",
     "butterflymuffin": "Butter Muffin",
