Localize text 'season'

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -29,6 +29,7 @@
     "potato_seeds_assumed_name": "Fluffy Seeds",
     "pumpkin_seeds_assumed_name": "Sharp Seeds",
     "rottenegg": "Rotten Egg",
+    "season": "Season",
     "seeds": "Seeds",
     "show_seeds_alias": "Show seeds alias",
     "sideBar_cook": "Cook",
