--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -29,6 +29,7 @@
     "potato_seeds_assumed_name": "솜털 씨앗",
     "pumpkin_seeds_assumed_name": "날카로운 씨앗",
     "rottenegg": "썩은 알",
+    "season": "계절",
     "seeds": "씨앗",
     "show_seeds_alias": "씨앗 별칭 표시",
     "sideBar_cook": "요리",
