--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -19,6 +19,7 @@
     "glommerfuel": "글로머의 점액",
     "growthFormula": "성장 촉진제",
     "guano": "구아노",
+    "balanced_nutrients": "영양소 균형!",
     "manure": "비료",
     "mix": "복합",
     "onion_seeds_assumed_name": "뾰족한 씨앗들",
@@ -37,6 +38,7 @@
     "spoiled_fish_small": "썩은 생선 조각",
     "spoiled_food_name": "부패물",
     "spring": "봄",
+    "suitable_seasons": "적합 계절",
     "summer": "여름",
     "tomato_seeds_assumed_name": "삐죽삐죽한 씨앗",
     "treegrowthsolution": "나무 잼",
