--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -1,8 +1,5 @@
 {
     "add": "Add",
-    "name": "name",
-    "crops": "Crops",
-    "fertilizers": "Fertilizers",
     "asparagus_seeds_assumed_name": "Tubular Seeds",
     "autumn": "Autumn",
     "butterflymuffin": "Butter Muffin",
@@ -11,16 +8,20 @@
     "compost": "Compost",
     "compostwrap": "Compost Wrap",
     "corn_seeds_assumed_name": "Clustered Seeds",
+    "crops": "Crops",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
     "durian_seeds_assumed_name": "Brittle Seed Pods",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
     "fertilizer": "Bucket-o-poop",
+    "fertilizers": "Fertilizers",
     "garlic_seeds_assumed_name": "Seed Pods",
     "glommerfuel": "Glommer's Goop",
     "growthFormula": "Growth Formula",
     "guano": "Guano",
     "manure": "Manure",
+    "balanced_nutrients": "Balanced nutrients",
     "mix": "Mix",
+    "name": "name",
     "onion_seeds_assumed_name": "Pointy Seeds",
     "pepper_seeds_assumed_name": "Lumpy Seeds",
     "pomegranate_seeds_assumed_name": "Windblown Seeds",
@@ -37,6 +38,7 @@
     "spoiled_fish_small": "Spoiled Fish Morsel",
     "spoiled_food_name": "Rot",
     "spring": "Spring",
+    "suitable_seasons": "Suitable Seasons",
     "summer": "Summer",
     "tomato_seeds_assumed_name": "Spiky Seeds",
     "treegrowthsolution": "Tree Jam",
