Move menu bar to the top

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -31,8 +31,8 @@
     "rottenegg": "Rotten Egg",
     "seeds": "Seeds",
     "show_seeds_alias": "Show seeds alias",
-    "sideBar_cook": "Cook",
-    "sideBar_farm": "Farm",
+    "menu_cook": "Cook",
+    "menu_farm": "Farm",
     "soil_amender": "Growth Formula Starter",
     "spoiled_fish": "Spoiled Fish",
     "spoiled_fish_small": "Spoiled Fish Morsel",
