--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -31,8 +31,8 @@
     "rottenegg": "썩은 알",
     "seeds": "씨앗",
     "show_seeds_alias": "씨앗 별칭 표시",
-    "sideBar_cook": "요리",
-    "sideBar_farm": "농사",
+    "menu_cook": "요리",
+    "menu_farm": "농사",
     "soil_amender": "성장 촉진제",
     "spoiled_fish": "썩은 생선",
     "spoiled_fish_small": "썩은 생선 조각",
