--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -2,15 +2,21 @@
     "add": "Add",
     "asparagus_seeds_assumed_name": "Tubular Seeds",
     "autumn": "Autumn",
+    "balanced_nutrients": "Balanced nutrients",
+    "basic": "Basic",
     "butterflymuffin": "Butter Muffin",
     "cancel": "Cancel",
     "carrot_seeds_assumed_name": "Oblong Seeds",
     "compost": "Compost",
     "compostwrap": "Compost Wrap",
+    "confirm": "Confirm",
     "corn_seeds_assumed_name": "Clustered Seeds",
     "crops": "Crops",
+    "dense": "Dense",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
     "durian_seeds_assumed_name": "Brittle Seed Pods",
+    "back_dialog_message": "You will lose what you are editing.",
+    "back_dialog_title": "Do you want to leave?",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
     "fertilizer": "Bucket-o-poop",
     "fertilizers": "Fertilizers",
@@ -19,7 +25,8 @@
     "growthFormula": "Growth Formula",
     "guano": "Guano",
     "manure": "Manure",
-    "balanced_nutrients": "Balanced nutrients",
+    "menu_cook": "Cook",
+    "menu_farm": "Farm",
     "mix": "Mix",
     "name": "name",
     "onion_seeds_assumed_name": "Pointy Seeds",
@@ -28,11 +35,10 @@
     "poop": "Manure",
     "potato_seeds_assumed_name": "Fluffy Seeds",
     "pumpkin_seeds_assumed_name": "Sharp Seeds",
+    "reverse_dense": "Dense(flip)",
     "rottenegg": "Rotten Egg",
     "seeds": "Seeds",
     "show_seeds_alias": "Show seeds alias",
-    "menu_cook": "Cook",
-    "menu_farm": "Farm",
     "soil_amender": "Growth Formula Starter",
     "spoiled_fish": "Spoiled Fish",
     "spoiled_fish_small": "Spoiled Fish Morsel",
@@ -43,8 +49,5 @@
     "tomato_seeds_assumed_name": "Spiky Seeds",
     "treegrowthsolution": "Tree Jam",
     "watermelon_seeds_assumed_name": "Square Seeds",
-    "basic": "Basic",
-    "dense": "Dense",
-    "reverse_dense": "Dense(flip)",
     "winter": "Winter"
 }
