Add popup menu to farm card

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -2,6 +2,8 @@
     "add": "Add",
     "asparagus_seeds_assumed_name": "Tubular Seeds",
     "autumn": "Autumn",
+    "back_dialog_message": "You will lose what you are editing.",
+    "back_dialog_title": "Do you want to leave?",
     "balanced_nutrients": "Balanced nutrients",
     "basic": "Basic",
     "butterflymuffin": "Butter Muffin",
@@ -15,8 +17,6 @@
     "dense": "Dense",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
     "durian_seeds_assumed_name": "Brittle Seed Pods",
-    "back_dialog_message": "You will lose what you are editing.",
-    "back_dialog_title": "Do you want to leave?",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
     "fertilizer": "Bucket-o-poop",
     "fertilizers": "Fertilizers",
@@ -38,6 +38,7 @@
     "reverse_dense": "Dense(flip)",
     "rottenegg": "Rotten Egg",
     "seeds": "Seeds",
+    "show_hidden_items": "Show hidden items",
     "show_seeds_alias": "Show seeds alias",
     "soil_amender": "Growth Formula Starter",
     "spoiled_fish": "Spoiled Fish",
