--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -2,6 +2,8 @@
     "add": "추가",
     "asparagus_seeds_assumed_name": "관모양 씨앗",
     "autumn": "가을",
+    "back_dialog_message": "작업 중인 내용은 저장되지 않습니다.",
+    "back_dialog_title": "화면을 떠나시겠습니까?",
     "balanced_nutrients": "영양소 균형!",
     "basic": "기본",
     "butterflymuffin": "버터 머핀",
@@ -15,8 +17,6 @@
     "dense": "밀집",
     "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
     "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
-    "back_dialog_message": "작업 중인 내용은 저장되지 않습니다.",
-    "back_dialog_title": "화면을 떠나시겠습니까?",
     "eggplant_seeds_assumed_name": "회오리무늬 씨앗",
     "fertilizer": "거름통",
     "fertilizers": "비료",
@@ -38,6 +38,7 @@
     "reverse_dense": "밀집(반전)",
     "rottenegg": "썩은 알",
     "seeds": "씨앗",
+    "show_hidden_items": "숨김 항목 표시",
     "show_seeds_alias": "씨앗 별칭 표시",
     "soil_amender": "성장 촉진제",
     "spoiled_fish": "썩은 생선",
