Add edit menu to popup of farm card

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -15,6 +15,7 @@
     "corn_seeds_assumed_name": "Clustered Seeds",
     "crops": "Crops",
     "dense": "Dense",
+    "done": "Done",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
     "durian_seeds_assumed_name": "Brittle Seed Pods",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
