--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -15,6 +15,7 @@
     "corn_seeds_assumed_name": "씨앗 뭉치",
     "crops": "작물",
     "dense": "밀집",
+    "done": "완료",
     "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
     "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
     "eggplant_seeds_assumed_name": "회오리무늬 씨앗",
