Apply some localization

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -14,10 +14,12 @@
     "confirm": "Confirm",
     "corn_seeds_assumed_name": "Clustered Seeds",
     "crops": "Crops",
+    "delete": "Delete",
     "dense": "Dense",
     "done": "Done",
     "dragonfruit_seeds_assumed_name": "Bulbous Seeds",
     "durian_seeds_assumed_name": "Brittle Seed Pods",
+    "edit": "Edit",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
     "fertilizer": "Bucket-o-poop",
     "fertilizers": "Fertilizers",
@@ -25,6 +27,7 @@
     "glommerfuel": "Glommer's Goop",
     "growthFormula": "Growth Formula",
     "guano": "Guano",
+    "hide": "Hide",
     "manure": "Manure",
     "menu_cook": "Cook",
     "menu_farm": "Farm",
@@ -39,6 +42,7 @@
     "reverse_dense": "Dense(flip)",
     "rottenegg": "Rotten Egg",
     "seeds": "Seeds",
+    "show": "Show",
     "show_hidden_items": "Show hidden items",
     "show_seeds_alias": "Show seeds alias",
     "soil_amender": "Growth Formula Starter",
