--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -14,10 +14,12 @@
     "confirm": "확인",
     "corn_seeds_assumed_name": "씨앗 뭉치",
     "crops": "작물",
+    "delete": "삭제",
     "dense": "밀집",
     "done": "완료",
     "dragonfruit_seeds_assumed_name": "둥글 납작 씨앗",
     "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
+    "edit": "편집",
     "eggplant_seeds_assumed_name": "회오리무늬 씨앗",
     "fertilizer": "거름통",
     "fertilizers": "비료",
@@ -25,6 +27,7 @@
     "glommerfuel": "글로머의 점액",
     "growthFormula": "성장 촉진제",
     "guano": "구아노",
+    "hide": "숨기기",
     "manure": "비료",
     "menu_cook": "요리",
     "menu_farm": "농사",
@@ -39,6 +42,7 @@
     "reverse_dense": "밀집(반전)",
     "rottenegg": "썩은 알",
     "seeds": "씨앗",
+    "show": "보이기",
     "show_hidden_items": "숨김 항목 표시",
     "show_seeds_alias": "씨앗 별칭 표시",
     "soil_amender": "성장 촉진제",
