Add a card view for giant crop conditions

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -24,6 +24,7 @@
     "fertilizer": "Bucket-o-poop",
     "fertilizers": "Fertilizers",
     "garlic_seeds_assumed_name": "Seed Pods",
+    "giant_crop": "Giant Crop",
     "glommerfuel": "Glommer's Goop",
     "growthFormula": "Growth Formula",
     "guano": "Guano",
