--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -24,6 +24,7 @@
     "fertilizer": "거름통",
     "fertilizers": "비료",
     "garlic_seeds_assumed_name": "씨앗 꼬투리",
+    "giant_crop": "거대 작물",
     "glommerfuel": "글로머의 점액",
     "growthFormula": "성장 촉진제",
     "guano": "구아노",
