Localize text of conditions

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -4,7 +4,6 @@
     "autumn": "Autumn",
     "back_dialog_message": "You will lose what you are editing.",
     "back_dialog_title": "Do you want to leave?",
-    "balanced_nutrients": "Balanced nutrients",
     "basic": "Basic",
     "butterflymuffin": "Butter Muffin",
     "cancel": "Cancel",
@@ -21,6 +20,9 @@
     "durian_seeds_assumed_name": "Brittle Seed Pods",
     "edit": "Edit",
     "eggplant_seeds_assumed_name": "Swirly Seeds",
+    "family_condition_satisfying_text": "All crops satisfy family conditions!",
+    "family_condition_unsatisfying_first_text": "Some crops don't satisfy the family condition.",
+    "family_condition_unsatisfying_secondary_text": "At least four crops must be adjacent.",
     "fertilizer": "Bucket-o-poop",
     "fertilizers": "Fertilizers",
     "garlic_seeds_assumed_name": "Seed Pods",
@@ -34,6 +36,10 @@
     "menu_farm": "Farm",
     "mix": "Mix",
     "name": "name",
+    "no_crops_message": "There are no crops placed.",
+    "nutrient_condition_satisfying_first_text": "Balanced nutrients!",
+    "nutrient_condition_unsatisfying_first_text": "The nutrients are not balanced.",
+    "nutrient_condition_unsatisfying_secondary_text": "Plant complementary crops or choose the right fertilizer.",
     "onion_seeds_assumed_name": "Pointy Seeds",
     "pepper_seeds_assumed_name": "Lumpy Seeds",
     "pomegranate_seeds_assumed_name": "Windblown Seeds",
@@ -42,6 +48,8 @@
     "pumpkin_seeds_assumed_name": "Sharp Seeds",
     "reverse_dense": "Dense(flip)",
     "rottenegg": "Rotten Egg",
+    "season_condition_unsatisfying_first_text": "There are no seasons to be a giant crop.",
+    "season_condition_unsatisfying_secondary_text": "Compose the farm with crops sharing a season.",
     "seeds": "Seeds",
     "show": "Show",
     "show_hidden_items": "Show hidden items",
