--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -4,7 +4,6 @@
     "autumn": "가을",
     "back_dialog_message": "작업 중인 내용은 저장되지 않습니다.",
     "back_dialog_title": "화면을 떠나시겠습니까?",
-    "balanced_nutrients": "영양소 균형!",
     "basic": "기본",
     "butterflymuffin": "버터 머핀",
     "cancel": "취소",
@@ -21,6 +20,9 @@
     "durian_seeds_assumed_name": "털난 씨앗 꼬투리",
     "edit": "편집",
     "eggplant_seeds_assumed_name": "회오리무늬 씨앗",
+    "family_condition_satisfying_text": "모든 작물이 가족 조건을 만족합니다!",
+    "family_condition_unsatisfying_first_text": "일부 작물이 가족 조건을 만족하지 않습니다.",
+    "family_condition_unsatisfying_secondary_text": "최소 4개 작물이 인접해 있어야 합니다.",
     "fertilizer": "거름통",
     "fertilizers": "비료",
     "garlic_seeds_assumed_name": "씨앗 꼬투리",
@@ -34,6 +36,10 @@
     "menu_farm": "농사",
     "mix": "복합",
     "name": "이름",
+    "no_crops_message": "배치된 작물이 없습니다.",
+    "nutrient_condition_satisfying_first_text": "영양소 균형!",
+    "nutrient_condition_unsatisfying_first_text": "영양소가 불균형 합니다.",
+    "nutrient_condition_unsatisfying_secondary_text": "보완되는 영양소를 가진 작물을 심거나, 적절한 비료를 선택하세요.",
     "onion_seeds_assumed_name": "뾰족한 씨앗들",
     "pepper_seeds_assumed_name": "혹투성이 씨앗",
     "pomegranate_seeds_assumed_name": "솜털 달린 씨앗",
@@ -42,6 +48,8 @@
     "pumpkin_seeds_assumed_name": "날카로운 씨앗",
     "reverse_dense": "밀집(반전)",
     "rottenegg": "썩은 알",
+    "season_condition_unsatisfying_first_text": "거대 작물이 될 수 있는 계절이 없습니다.",
+    "season_condition_unsatisfying_secondary_text": "같은 계절의 작물들로 밭을 구성하세요.",
     "seeds": "씨앗",
     "show": "보이기",
     "show_hidden_items": "숨김 항목 표시",
