--- a/lib/l10n/arbs/intl_ko.arb
+++ b/lib/l10n/arbs/intl_ko.arb
@@ -1,6 +1,16 @@
 {
   "@@last_modified": "2024-09-19T00:21:02.962441",
   "@@locale": "ko",
+  "seasonConditionSatisfyingText": "{seasonsText}에 거대 작물이 됩니다!",
+  "@seasonConditionSatisfyingText": {
+    "type": "text",
+    "placeholders": {
+      "seasonsText": {
+        "type": "String",
+        "example": "<spring>봄</spring>, <fall>가을</fall>"
+      }
+    }
+  },
   "add": "추가",
   "@add": {
     "type": "text",
