Localize recipe names to Korean

--- a/lib/l10n/arbs/intl_ko.arb
+++ b/lib/l10n/arbs/intl_ko.arb
@@ -351,352 +351,352 @@
     "type": "text",
     "placeholders": {}
   },
-  "dustmeringue_name": "Amberosia",
+  "dustmeringue_name": "앰버로시아",
   "@dustmeringue_name": {
     "type": "text",
     "placeholders": {}
   },
-  "asparagussoup_name": "Asparagus Soup",
+  "asparagussoup_name": "아스파라거스 수프",
   "@asparagussoup_name": {
     "type": "text",
     "placeholders": {}
   },
-  "baconeggs_name": "Bacon and Eggs",
+  "baconeggs_name": "베이컨 앤 에그",
   "@baconeggs_name": {
     "type": "text",
     "placeholders": {}
   },
-  "bananapop_name": "Banana Pop",
+  "bananapop_name": "바나나 팝",
   "@bananapop_name": {
     "type": "text",
     "placeholders": {}
   },
-  "bananajuice_name": "Banana Shake",
+  "bananajuice_name": "바나나 셰이크",
   "@bananajuice_name": {
     "type": "text",
     "placeholders": {}
   },
-  "barnaclinguine_name": "Barnacle Linguine",
+  "barnaclinguine_name": "거북순 링귀니",
   "@barnaclinguine_name": {
     "type": "text",
     "placeholders": {}
   },
-  "barnaclesushi_name": "Barnacle Nigiri",
+  "barnaclesushi_name": "거북순 초밥",
   "@barnaclesushi_name": {
     "type": "text",
     "placeholders": {}
   },
-  "barnaclepita_name": "Barnacle Pita",
+  "barnaclepita_name": "거북순 피타",
   "@barnaclepita_name": {
     "type": "text",
     "placeholders": {}
   },
-  "beefalotreat_name": "Beefalo Treats",
+  "beefalotreat_name": "비팔로 간식",
   "@beefalotreat_name": {
     "type": "text",
     "placeholders": {}
   },
-  "meatysalad_name": "Beefy Greens",
+  "meatysalad_name": "풀고기 샐러드",
   "@meatysalad_name": {
     "type": "text",
     "placeholders": {}
   },
-  "veggieomlet_name": "Breakfast Skillet",
+  "veggieomlet_name": "아침식사용 스킬렛",
   "@veggieomlet_name": {
     "type": "text",
     "placeholders": {}
   },
-  "bunnystew_name": "Bunny Stew",
+  "bunnystew_name": "토끼 스튜",
   "@bunnystew_name": {
     "type": "text",
     "placeholders": {}
   },
-  "butterflymuffin_name": "Butter Muffin",
+  "butterflymuffin_name": "버터 머핀",
   "@butterflymuffin_name": {
     "type": "text",
     "placeholders": {}
   },
-  "californiaroll_name": "California Roll",
+  "californiaroll_name": "캘리포니아 롤",
   "@californiaroll_name": {
     "type": "text",
     "placeholders": {}
   },
-  "ceviche_name": "Ceviche",
+  "ceviche_name": "세비체",
   "@ceviche_name": {
     "type": "text",
     "placeholders": {}
   },
-  "mashedpotatoes_name": "Creamy Potato Purée",
+  "mashedpotatoes_name": "부드러운 감자 퓌레",
   "@mashedpotatoes_name": {
     "type": "text",
     "placeholders": {}
   },
-  "dragonpie_name": "Dragonpie",
+  "dragonpie_name": "용과 파이",
   "@dragonpie_name": {
     "type": "text",
     "placeholders": {}
   },
-  "potatotornado_name": "Fancy Spiralled Tubers",
+  "potatotornado_name": "화려한 회오리 감자",
   "@potatotornado_name": {
     "type": "text",
     "placeholders": {}
   },
-  "figatoni_name": "Figatoni",
+  "figatoni_name": "피가토니",
   "@figatoni_name": {
     "type": "text",
     "placeholders": {}
   },
-  "frognewton_name": "Figgy Frogwich",
+  "frognewton_name": "무화과 개구리 샌드위치",
   "@frognewton_name": {
     "type": "text",
     "placeholders": {}
   },
-  "figkabab_name": "Figkabab",
+  "figkabab_name": "무화과 케밥",
   "@figkabab_name": {
     "type": "text",
     "placeholders": {}
   },
-  "koalefig_trunk_name": "Fig-Stuffed Trunk",
+  "koalefig_trunk_name": "무화과 채운 코",
   "@koalefig_trunk_name": {
     "type": "text",
     "placeholders": {}
   },
-  "fishtacos_name": "Fish Tacos",
+  "fishtacos_name": "생선 타코",
   "@fishtacos_name": {
     "type": "text",
     "placeholders": {}
   },
-  "fishsticks_name": "Fishsticks",
+  "fishsticks_name": "생선튀김",
   "@fishsticks_name": {
     "type": "text",
     "placeholders": {}
   },
-  "jammypreserves_name": "Fist Full of Jam",
+  "jammypreserves_name": "잼 한 줌",
   "@jammypreserves_name": {
     "type": "text",
     "placeholders": {}
   },
-  "flowersalad_name": "Flower Salad",
+  "flowersalad_name": "꽃 샐러드",
   "@flowersalad_name": {
     "type": "text",
     "placeholders": {}
   },
-  "frogglebunwich_name": "Froggle Bunwich",
+  "frogglebunwich_name": "무화과 개구리 샌드위치",
   "@frogglebunwich_name": {
     "type": "text",
     "placeholders": {}
   },
-  "frozenbananadaiquiri_name": "Frozen Banana Daiquiri",
+  "frozenbananadaiquiri_name": "얼린 바나나 다이키리",
   "@frozenbananadaiquiri_name": {
     "type": "text",
     "placeholders": {}
   },
-  "fruitmedley_name": "Fruit Medley",
+  "fruitmedley_name": "과일 모둠",
   "@fruitmedley_name": {
     "type": "text",
     "placeholders": {}
   },
-  "guacamole_name": "Guacamole",
+  "guacamole_name": "과카몰리",
   "@guacamole_name": {
     "type": "text",
     "placeholders": {}
   },
-  "honeyham_name": "Honey Ham",
+  "honeyham_name": "꿀바른 햄",
   "@honeyham_name": {
     "type": "text",
     "placeholders": {}
   },
-  "honeynuggets_name": "Honey Nuggets",
+  "honeynuggets_name": "꿀바른 너겟",
   "@honeynuggets_name": {
     "type": "text",
     "placeholders": {}
   },
-  "icecream_name": "Ice Cream",
+  "icecream_name": "아이스크림",
   "@icecream_name": {
     "type": "text",
     "placeholders": {}
   },
-  "jellybean_name": "Jellybeans",
+  "jellybean_name": "젤리빈",
   "@jellybean_name": {
     "type": "text",
     "placeholders": {}
   },
-  "leafymeatsouffle_name": "Jelly Salad",
+  "leafymeatsouffle_name": "젤리 샐러드",
   "@leafymeatsouffle_name": {
     "type": "text",
     "placeholders": {}
   },
-  "kabobs_name": "Kabobs",
+  "kabobs_name": "케밥",
   "@kabobs_name": {
     "type": "text",
     "placeholders": {}
   },
-  "mandrakesoup_name": "Mandrake Soup",
+  "mandrakesoup_name": "만드레이크 수프",
   "@mandrakesoup_name": {
     "type": "text",
     "placeholders": {}
   },
-  "meatballs_name": "Meatballs",
+  "meatballs_name": "미트볼",
   "@meatballs_name": {
     "type": "text",
     "placeholders": {}
   },
-  "bonestew_name": "Meaty Stew",
+  "bonestew_name": "고기 스튜",
   "@bonestew_name": {
     "type": "text",
     "placeholders": {}
   },
-  "watermelonicle_name": "Melonsicle",
+  "watermelonicle_name": "수박바",
   "@watermelonicle_name": {
     "type": "text",
     "placeholders": {}
   },
-  "batnosehat_name": "Milkmade Hat",
+  "batnosehat_name": "우유 짜는 모자",
   "@batnosehat_name": {
     "type": "text",
     "placeholders": {}
   },
-  "monsterlasagna_name": "Monster Lasagna",
+  "monsterlasagna_name": "괴물 라자냐",
   "@monsterlasagna_name": {
     "type": "text",
     "placeholders": {}
   },
-  "shroomcake_name": "Mushy Cake",
+  "shroomcake_name": "버섯 케이크",
   "@shroomcake_name": {
     "type": "text",
     "placeholders": {}
   },
-  "leafloaf_name": "Leafy Meatloaf",
+  "leafloaf_name": "풀고기 미트로프",
   "@leafloaf_name": {
     "type": "text",
     "placeholders": {}
   },
-  "perogies_name": "Pierogi",
+  "perogies_name": "피에로기",
   "@perogies_name": {
     "type": "text",
     "placeholders": {}
   },
-  "justeggs_name": "Plain Omelette",
+  "justeggs_name": "소박한 오믈렛",
   "@justeggs_name": {
     "type": "text",
     "placeholders": {}
   },
-  "powcake_name": "Powdercake",
+  "powcake_name": "파우더 케이크",
   "@powcake_name": {
     "type": "text",
     "placeholders": {}
   },
-  "pumpkincookie_name": "Pumpkin Cookie",
+  "pumpkincookie_name": "호박 쿠키",
   "@pumpkincookie_name": {
     "type": "text",
     "placeholders": {}
   },
-  "ratatouille_name": "Ratatouille",
+  "ratatouille_name": "라따뚜이",
   "@ratatouille_name": {
     "type": "text",
     "placeholders": {}
   },
-  "salsa_name": "Salsa Fresca",
+  "salsa_name": "살사 프레스카",
   "@salsa_name": {
     "type": "text",
     "placeholders": {}
   },
-  "seafoodgumbo_name": "Seafood Gumbo",
+  "seafoodgumbo_name": "해산물 검보",
   "@seafoodgumbo_name": {
     "type": "text",
     "placeholders": {}
   },
-  "sweettea_name": "Soothing Tea",
+  "sweettea_name": "평온차",
   "@sweettea_name": {
     "type": "text",
     "placeholders": {}
   },
-  "hotchili_name": "Spicy Chili",
+  "hotchili_name": "매운 칠리",
   "@hotchili_name": {
     "type": "text",
     "placeholders": {}
   },
-  "beefalofeed_name": "Steamed Twigs",
+  "beefalofeed_name": "잔가지 찜",
   "@beefalofeed_name": {
     "type": "text",
     "placeholders": {}
   },
-  "stuffedeggplant_name": "Stuffed Eggplant",
+  "stuffedeggplant_name": "속 채운 가지",
   "@stuffedeggplant_name": {
     "type": "text",
     "placeholders": {}
   },
-  "barnaclestuffedfishhead_name": "Stuffed Fish Heads",
+  "barnaclestuffedfishhead_name": "속 채운 생선 머리",
   "@barnaclestuffedfishhead_name": {
     "type": "text",
     "placeholders": {}
   },
-  "shroombait_name": "Stuffed Night Cap",
+  "shroombait_name": "속 채운 독버섯",
   "@shroombait_name": {
     "type": "text",
     "placeholders": {}
   },
-  "pepperpopper_name": "Stuffed Pepper Poppers",
+  "pepperpopper_name": "속 채운 고추 페퍼",
   "@pepperpopper_name": {
     "type": "text",
     "placeholders": {}
   },
-  "surfnturf_name": "Surf 'n' Turf",
+  "surfnturf_name": "서프 앤 터프",
   "@surfnturf_name": {
     "type": "text",
     "placeholders": {}
   },
-  "taffy_name": "Taffy",
+  "taffy_name": "사탕",
   "@taffy_name": {
     "type": "text",
     "placeholders": {}
   },
-  "talleggs_name": "Tall Scotch Eggs",
+  "talleggs_name": "키다리 스카치에그",
   "@talleggs_name": {
     "type": "text",
     "placeholders": {}
   },
-  "trailmix_name": "Trail Mix",
+  "trailmix_name": "산행 스낵",
   "@trailmix_name": {
     "type": "text",
     "placeholders": {}
   },
-  "turkeydinner_name": "Turkey Dinner",
+  "turkeydinner_name": "칠면조 정식",
   "@turkeydinner_name": {
     "type": "text",
     "placeholders": {}
   },
-  "unagi_name": "Unagi",
+  "unagi_name": "장어 초밥",
   "@unagi_name": {
     "type": "text",
     "placeholders": {}
   },
-  "leafymeatburger_name": "Veggie Burger",
+  "leafymeatburger_name": "야채 버거",
   "@leafymeatburger_name": {
     "type": "text",
     "placeholders": {}
   },
-  "vegstinger_name": "Vegetable Stinger",
+  "vegstinger_name": "야채 스팅어",
   "@vegstinger_name": {
     "type": "text",
     "placeholders": {}
   },
-  "waffles_name": "Waffles",
+  "waffles_name": "와플",
   "@waffles_name": {
     "type": "text",
     "placeholders": {}
   },
-  "wetgoop_name": "Wet Goop",
+  "wetgoop_name": "곤죽",
   "@wetgoop_name": {
     "type": "text",
     "placeholders": {}
   },
-  "lobsterbisque_name": "Wobster Bisque",
+  "lobsterbisque_name": "왑스터 비스크",
   "@lobsterbisque_name": {
     "type": "text",
     "placeholders": {}
   },
-  "lobsterdinner_name": "Wobster Dinner",
+  "lobsterdinner_name": "왑스터 정식",
   "@lobsterdinner_name": {
     "type": "text",
     "placeholders": {}
